--- a/resources/index.html
+++ b/resources/index.html
@@ -38,6 +38,37 @@
             </div>
         </div>
       </section>
+      <!-- portfolio section -->
+      <section>
+        <div class="container">
+            <h6>THE BEST GIFTS</h6>
+            <h3>Our Awesome Portfolio</h3>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <div class="pic-line1">
+               <div class="pic3">
+                <img src="Rectangle 3.png" alt="">
+               </div>
+               <div class="pic4">
+                <img src="Rectangle 4.png" alt="">
+               </div>
+               <div class="pic5">
+                <img src="Rectangle 5.png" alt="">
+               </div>
+            </div>
+        <div class="pic-line2">
+            <div class="pic-r6">
+                <img src="Rectangle 6.png" alt="">
+            </div>
+            <div class="pic-r7">
+                <img src="Rectangle 7.png" alt="">
+            </div>
+            <div class="pic-r8">
+                <img src="Rectangle 8.png" alt="">
+            </div>
+        </div>
+        </div>
+      </section>
+
     </main>
 
 </body>
